EBODAC-659: DEV - Fix checkstyle warnings